hphp/hack/test/typecheck/coeffects/write_props/test_write_this_props_check.php.legacy_decl.exp
File "test_write_this_props_check.php", line 10, characters 9-27:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_write_this_props_check.php", line 23, characters 5-20:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_write_this_props_check.php", line 31, characters 5-20:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_write_this_props_check.php", line 17, characters 49-64:
Unbound name: `HH\Contexts\Unsafe\write_this_props` (Naming[2049])
File "test_write_this_props_check.php", line 17, characters 49-64:
Unbound name: `HH\Contexts\write_this_props` (Naming[2049])
File "test_write_this_props_check.php", line 30, characters 44-59:
Unbound name: `HH\Contexts\Unsafe\write_this_props` (Naming[2049])
File "test_write_this_props_check.php", line 30, characters 44-59:
Unbound name: `HH\Contexts\write_this_props` (Naming[2049])
File "test_write_this_props_check.php", line 10, characters 9-23:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "test_write_this_props_check.php", line 9, characters 34-35:
  The local (enclosing) context provides the capability set {}
File "test_write_this_props_check.php", line 23, characters 5-16:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "test_write_this_props_check.php", line 22, characters 31-32:
  The local (enclosing) context provides the capability set {}
